# conductor-hs

./: Dockerfile  README.md  conductor-hs.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Web.hs
