name:                conductor-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/recordunion/conductor-hs
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          marco.zocca@recordunion.com
copyright:           2017 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Web
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , transformers
                     , mtl
                     , free
                     , stm
                     , exceptions
                     , snap-core
                     , snap-server
                     -- , scotty
                     -- , wai >= 3.2
                     -- , http-types

executable conductor-hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , conductor-hs
                     -- , scotty
                     -- , wai >= 3.2

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , conductor-hs
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/recordunion/conductor-hs
